--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "material-ui": "^0.20.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-grid-system": "^3.1.2",
     "react-scripts": "1.1.1"
   },
   "scripts": {
