--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-grid-system": "^3.1.2",
-    "react-scripts": "1.1.1"    
+    "react-scripts": "1.1.1",
+    "react-tap-event-plugin": "^3.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
