--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react-dom": "^16.2.0",
     "react-grid-system": "^3.1.2",
     "react-scripts": "1.1.1",
-    "react-tap-event-plugin": "^3.0.2"
+    "react-tap-event-plugin": "^3.0.2",
+    "superagent": "^3.8.2"
   },
   "scripts": {
     "start": "react-scripts start",
