--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-grid-system": "^3.1.2",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
     "react-tap-event-plugin": "^3.0.2",
     "superagent": "^3.8.2"
